--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,26 +1,23 @@
 ja:
   activerecord:
-    models:
-      user: "ユーザー"
-      user_address: "住所"
     attributes:
       user:
-        first_name: "名字"
-        last_name: "名前"
-        first_name_kana: "名字（カナ）"
-        last_name_kana: "名前（カナ）"
-        nickname: "ニックネーム"
-        birth_date: "生年月日"
-        phone_number: "電話番号"
+        first_name: 名字
+        last_name: 名前
+        first_name_kana: 名字（カナ）
+        last_name_kana: 名前（カナ）
+        nickname: ニックネーム
+        birth_date: 生年月日
+        phone_number: 電話番号
 
       user_address:
-        address_first_name: "名字"
-        address_last_name: "名前"
-        address_first_name_kana: "名字（カナ）"
-        address_last_name_kana: "名前（カナ）"
-        post_number: "郵便番号"
-        prefectures: "都道府県"
-        city: "市区町村"
-        house_number: "番地"
-        building_name: "マンション・アパート名"
-        address_phone_number: "電話番号"
+        address_first_name: 名字
+        address_last_name: 名前
+        address_first_name_kana: 名字（カナ）
+        address_last_name_kana: 名前（カナ）
+        post_number: 郵便番号
+        prefectures: 都道府県
+        city: 市区町村
+        house_number: 番地
+        building_name: マンション・アパート名
+        address_phone_number: 電話番号
