--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -4,8 +4,8 @@ ja:
       user:
         first_name: 名字
         last_name: 名前
-        first_name_kana: 名字（カナ）
-        last_name_kana: 名前（カナ）
+        first_name_kana: 名字（かな）
+        last_name_kana: 名前（かな）
         nickname: ニックネーム
         birth_date: 生年月日
         phone_number: 電話番号
@@ -35,8 +35,8 @@ ja:
       user_address:
         address_first_name: 名字
         address_last_name: 名前
-        address_first_name_kana: 名字（カナ）
-        address_last_name_kana: 名前（カナ）
+        address_first_name_kana: 名字（かな）
+        address_last_name_kana: 名前（かな）
         post_number: 郵便番号
         prefectures: 都道府県
         city: 市区町村
