--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -159,3 +159,7 @@ ja:
       not_saved:
         one: エラーが発生したため %{resource} は保存されませんでした。
         other: "%{count} 件のエラーが発生したため %{resource} は保存されませんでした。"
+  helpers:
+    submit:
+      create: "出品する"
+      update: "更新する"
